--- a/database/settings.gradle
+++ b/database/settings.gradle
@@ -7,7 +7,4 @@
  * in the user manual at https://docs.gradle.org/6.7/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'netero'
-include 'neterosetting'
-include 'neterorecording'
-include 'database'
+rootProject.name = 'database'
